clean up ui, work on game logic